@@ -80,7 +80,10 @@ GW_DEFAULT["RAID_UNIT_FLAGS"] = "NONE"
 GW_DEFAULT["RAID_UNIT_MARKERS"] = false
 GW_DEFAULT["WORLD_MARKER_FRAME"] = true
 
-GW_DEFAULT["FADE_BOTTOM_ACTIONBAR"] = true
+GW_DEFAULT["FADE_MULTIACTIONBAR_1"] = "ALWAYS"
+GW_DEFAULT["FADE_MULTIACTIONBAR_2"] = "ALWAYS"
+GW_DEFAULT["FADE_MULTIACTIONBAR_3"] = "ALWAYS"
+GW_DEFAULT["FADE_MULTIACTIONBAR_4"] = "ALWAYS"
 GW_DEFAULT["HIDE_CHATSHADOW"] = false
 GW_DEFAULT["HIDE_QUESTVIEW"] = false
 GW_DEFAULT["USE_CHAT_BUBBLES"] = false
