@@ -241,6 +241,7 @@ local function GWUseThisLocalization()
 	GwLocalization["ANCHOR_CURSOR_OFFSET_X"] = "Zeigeranker X-Versatz"
 	GwLocalization["ANCHOR_CURSOR_OFFSET_Y"] = "Zeigeranker Y-Versatz"
 	GwLocalization["ANCHOR_CURSOR_OFFSET_DESC"] = "Wird nur angewendet, wenn die Option 'Tooltip an der Maus' aktiviert und der Mausanker Typ NICHT 'Mausanker' ist"
+	GwLocalization["MOUSE_OVER"] = "Nur Maus über"
 end
 
 
