@@ -237,6 +237,7 @@ local function GWUseThisLocalization()
 	GwLocalization["ANCHOR_CURSOR_OFFSET_X"] = "Cursor Anchor Offset X"
 	GwLocalization["ANCHOR_CURSOR_OFFSET_Y"] = "Cursor Anchor Offset Y"
 	GwLocalization["ANCHOR_CURSOR_OFFSET_DESC"] = "Take only effect if the option 'Cursor Tooltips' is activated and the Cursoer Anchor is NOT 'Cursor Anchor'"
+	GwLocalization["MOUSE_OVER"] = "Only Mouse over"
 
 	--Composite
 	GwLocalization["TOPLEFT"] = ("%s %s"):format(GwLocalization["TOP"], GwLocalization["LEFT"])
